avoid zoom on iOS when focus search input

--- a/app/components/Search/Search.module.css
+++ b/app/components/Search/Search.module.css
@@ -29,6 +29,10 @@
     padding-inline-start: 2.5rem;
     vertical-align: middle;
 
+    @media (max-width: 450px) {
+      font-size: 16px;
+    }
+
     &[data-focused] {
       outline: none;
       outline: 1px solid var(--focus-ring-color);
